通过spi加工厂模式 避免因为spi机制所产生的单例导致的多事件共享